test/scc/pp/errors/011.a
011.t:1:2: error: unknown preprocessing directive